client/src/containers/Fanfic/components/ShowFanficData/showFandomData.scss
@import "../../../../style/_varibles";
@import "../../../../style/_colors";

.root {
  display: "flex";
  flex-wrap: "wrap";
  flex-direction: "column";
  overflow: "hidden";
  margin: 0 auto;

  .card {
    margin: 0.5% 0.5%;
    max-width: 100%;
    background-color: #fafafa;
    display: flex;
    // z-index:888;

    // .border_AO3{border-top: 1px solid $color_AO3;}
    // .border_FF{border-top: 1px solid $color_FF;}

    .card_media {
      width: 150px;
      height: 100px;
    }

    .details-image {
      float: left;
      width: 210px;
      display: flex;
      justify-content: center;
      //align-items: center;
      height: 100%;

      .card_image {
        width: 200px;
        height: 300px;
        border-radius: 5%;
        position: relative;
        background-size: 200px 300px;
      }
      .card_image_opacity {
        opacity: 0.5;
      }
      .card_image_layer {
        // background-color: rgba(75, 86, 160, 0.7);
        border-radius: 5%;
        width: 200px;
        height: 300px;
      }
      .card_image_overlay {
        font-weight: 900;

        position: absolute;
        margin: 0 auto;
        text-align: center;
        left: 0px;
        bottom: 10%;
        width: 200px;
        float: left;
        background: rgba(25, 25, 25, 0.5);
        z-index: 888;
      }
    }
    .detailsWithImage {
      float: left;
      width: calc(100% - 220px);
    }
    .detailsWithoutImage {
      float: left;
      width: 100%;
    }
    .card_content {
      padding: 0;

      // flex: '1 0 auto';

      .card_content_header {
        width: 100%;
        display: block;
        line-height: 0.75;

        .card_content_header_right {
          text-align: left;
          width: 80%;
          margin-top: 1%;
          float: left;
        }
        .card_content_header_right .fanfic_source {
          display: table;
          margin-left: 1%;
          float: left;
          width: 25px;
          height: 25px;
          font-size: 0.8em;
          text-align: center;
          background-color: antiquewhite;

          span {
            display: table-cell;
            vertical-align: middle;
          }
        }
        .card_content_header_right img {
          margin-left: 1%;
          float: left;
        }
        .card_content_header_right .text_content {
          margin-bottom: 10px;
          margin-left: 1%;
          margin-top: 2px;
          float: left;
          width: 90%;
        }
        .card_content_header_right h6 {
          line-height: 0.75;
          font-size: 1em;
          font-weight: 550;
        }
        .card_content_header_right h6 a {
          text-decoration: underline;
          font-weight: 600;
        }
        .fandom_tags_container {
          margin-left: -1%;
          margin-top: 1%;
        }
        .fandom_tags {
          text-align: left;
          margin-left: 1%;
          height: 20px !important;
        }
        .card_content_header_left {
          text-align: right;
          float: right;
          width: 20%;
          margin-top: 1%;
        }
        .card_content_header_left h6 {
          margin-bottom: 10px;
          margin-right: 4%;
          float: right;
          margin-top: 1px;
          font-size: 1em;
          font-weight: 600;
        }
        .badge {
          text-decoration: none;
          color: #fff;
          display: inline-block;
          margin-bottom: 0;
          font-weight: 200;
          text-align: center;
          border-radius: 4px 4px 4px 4px;
          line-height: 1.2em;
          margin-left: 2%;
          padding: 0 6px 0 6px;
        }

        .complete {
          background-color: #5cb85c;
          border-color: #4cae4c;
        }

        .oneshot {
          background-color: #d4761e;
          border-color: #d4761e;
        }

        .deleted {
          background-color: #c02b2b;
          border-color: #c02b2b;
        }

        .hiatus {
          background-color: #e6d81b;
          border-color: #e6d81b;
        }
      }
      .card_content_categories {
        text-align: left;
        margin-left: 1%;

        .card_content_categories_caption {
          font-weight: 600;
          float: left;
          margin-top: 0.6% !important;
        }

        .card_content_categories_div {
          display: inline;
          font-size: 0.8em;

          .category_chip {
            // height: 20px !important;
            font-weight: 600;
            font-size: 1em;
            color: #383732;
            border-radius: 10px;
            margin-top: 0.3%;
            margin-left: 0.2%;
          }
        }
        .card_content_select_categories_div {
          .SelectCategories_container {
            position: absolute;
            margin-left: 5%;
            width: 100%;
            .SelectCategories {
              float: left;
              width: 40%;
            }
          }
          button {
            margin-left: 45%;
          }
        }
      }
      .card_content_tags {
        text-align: left;
        margin-left: 1%;
        text-transform: capitalize;

        .card_content_tags_caption {
          display: inline;
          font-weight: 600;
        }
        .card_content_tags_div {
          display: inline;
          font-size: 0.8em;
          // margin-left: 6.5%;
        }
        .tags_chip {
          height: 20px !important;
          margin-top: 0.3%;
          margin-left: 0.2%;
        }
      }
      .card_content_desc {
        margin-left: 1%;
        text-align: left;

        p {
          margin: 1.286em auto;
          padding: 0;
          line-height: 1.4em;
        }
      }
      .card_content_series {
        text-align: left;
        margin-left: 1%;
        margin-top: 1%;
        // text-transform: capitalize;
        font-weight: 500;
        line-height: 1.4em;
        span {
          font-weight: 600;
        }
        a {
          text-decoration: underline #383732;
        }
      }
      .card_content_stat {
        dt,
        dd,
        .card_content_stat_dt,
        .card_content_stat_dd {
          float: left;
          margin-left: 1%;
          margin-bottom: 1%;
        }
        .card_content_stat_dt {
          font-weight: 600;
        }
      }
      .card_content_stat_source {
        font-weight: 700;
      }

      .card_content_userData {
        padding: 0;
        width: 100%;
        height: auto;
        display: block;
        float: left;
        margin-left: 0.5%;

        .userData input {
          margin-top: 10%;
          width: 65px;
          border-radius: 10%;
        }
        .SavedFile {
          margin-top: 10px;
          float: right;
          margin-right: 1%;
        }
        .userData input::-webkit-input-placeholder {
          text-align: center;
        }

        .userData {
          float: left;
        }

        .userData_icon {
          float: left;
        }
        .userData_iconLabel {
          font-weight: 300;
          font-size: 1em;
        }

        .userData_red span:hover,
        .userData_red span {
          fill: rgb(192, 43, 43) !important;
          color: rgb(192, 43, 43) !important;
        }

        .userData_orange span:hover,
        .userData_orange span {
          fill: rgba(214, 130, 20, 0.726) !important;
          color: rgba(214, 130, 20, 0.726) !important;
        }
        .userData_green span:hover,
        .userData_green span,
        .rl_green {
          fill: rgb(23, 167, 119) !important;
          color: rgb(23, 167, 119) !important;
        }
      }
    }
  }
}

.ReadingList_DropDown {
  .ReadingList_DropDown_rl {
    list-style-type: none;
    padding: 5px 0 0;
    margin: 0;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    max-height: 200px;
    background-clip: border-box;
  }
  .ReadingList_DropDown_new {
    padding: 10px 0 10px 10px;
    position: relative;
  }
  span.rl_green {
    fill: rgb(23, 167, 119) !important;
    color: rgb(23, 167, 119) !important;
  }
}

@media only screen and (max-width: $screenSizeM) {
  .root {
    .card {
      .card_content {
        .card_content_categories {
          .card_content_select_categories_div {
            .SelectCategories_container {
              margin-left: 8%;
            }
            button {
              margin-left: 44%;
            }
          }
        }
      }
    }
  }
}
@media only screen and (max-width: $screenSizeS) {
  .root {
    .card {
      .card_content {
        padding: 0;
        .card_content_header {
          .card_content_header_left {
            width: 30%;
            float: right;
            // margin-top: -5%;
          }
          .card_content_header_left h6 {
            font-size: 0.8em;
            font-weight: 500;
            margin-bottom: 0;
          }
          .title {
            font-weight: 600;
          }
          .card_content_header_right {
            width: 100%;
            float: left;
          }
          .card_content_header_right .text_content {
            width: 100%;
            float: none;
            margin-top: 1%;
            margin-left: 10%;
          }
          .card_content_header_right h6 {
            font-size: 1em;
            font-weight: 500;
            margin-left: 1%;
            margin-top: -2%;
          }
          .card_content_header_right a {
            line-height: 1.2em;
          }
          .tags_button {
            margin-top: -1%;
          }
          .fandom_tags {
            font-size: 0.6em;
            margin-left: 2%;
            margin-top: 1%;
          }
          .fandom_tags_container {
            width: 100%;
          }
          .badge {
            display: block;
            margin-left: -1%;
            margin-top: 2%;
            width: 50%;
          }
        }

        .card_content_tags {
          text-align: left;
          margin-left: 1%;
          text-transform: capitalize;

          b {
            font-weight: 600;
            font-size: 0.8em;
          }
          .card_content_tags_div {
            font-size: 0.8em;
          }
          .tags_chip {
            font-size: 0.7em;
          }
        }

        .card_content_userData {
          .userData button span {
            color: $color_text;
          }
        }
      }
    }
  }
}

